--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lịch sử</title>
+    <title>Plan de Vietnam | Hanoi version</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/ol@v9.1.0/ol.css"
     />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <script src="https://cdn.jsdelivr.net/npm/ol@v9.1.0/dist/ol.js"></script>
     <style>
       html,
