--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       const osmLayer = new ol.layer.Tile({
         source: new ol.source.OSM({
           attributions: [
-            '©OpenStreetMap contributors | <a href="https://threads.com/@tomeyinhanoi">By Tomey</a>',
+            '©OpenStreetMap | <a href="https://threads.com/@tomeyinhanoi">By Tomey</a> | <a href="https://hanoimaps.github.io/info">Sources</a>',
           ],
         }),
       });
