add webworker to load json off-thread

--- a/index.html
+++ b/index.html
@@ -154,6 +154,10 @@
         style: `https://api.maptiler.com/maps/streets-v2/style.json?key=${apiKey}`,
         center: [105.8542, 21.0285],
         zoom: minZoomLevel,
+        maxBounds: [
+          [105.5, 20.7],
+          [106.1, 21.5],
+        ],
         attributionControl: false,
       });
 
