--- a/villas/index.html
+++ b/villas/index.html
@@ -92,7 +92,7 @@
         if ("serviceWorker" in navigator) {
           window.addEventListener("load", () => {
             navigator.serviceWorker
-              .register("/sw.js", { scope: "/" })
+              .register("./sw.js", { scope: "./" })
               .then((registration) => {
                 console.log(
                   "ServiceWorker registration successful with scope: ",
